<resources>
    <string name="app_name">Cliper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_Registe">register</string>
    <string name="title_Login">login</string>
    <string name="title_Communication">communications</string>
    <string name="title_Send">send</string>
    <string name="title_Receive">receive</string>

    <!-- Strings related to nav_header_main-->
    <string name="action_Android_Studio">Android Studio</string>

    <!-- Strings related to content_main-->
    <string name="action_team">Hello! \nWelcome to Cliper.</string>


    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Log in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_register">Sign up</string>
    <!-- Strings related to register-->
    <string name="usernameString">Username</string>
    <string name="passwordString">Password</string>
    <string name="action_sign_in1">register</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_Logout">logout</string>

</resources>
