<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_REGISTE"
            android:title="@string/title_Registe" />
        <item
            android:id="@+id/nav_LOGIN"
            android:title="@string/title_Login" />

        <item
            android:id="@+id/nav_LOGOUT"
            android:title="@string/title_Logout" />
    </group>

    <item android:title="@string/title_Communication">
        <menu>
            <item
                android:id="@+id/nav_Send"
                android:title="@string/title_Send" />
            <item
                android:id="@+id/nav_Receive"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_Receive" />
        </menu>
    </item>

</menu>
